style.css
/*Reset*/
*,*::before,*::after{
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

/*Colours*/
:root{
	--darkgrey: #3E4A4B;
	--mediumgrey: #B8CBCE;
	--lightgrey: #D2E7EA;

	--darkpink: #FD11AD;
  --mediumpink: #F9B5D8;
  --lightpink: #FEE0F8;

	--darkpurple: #620CA6;
	--mediumpurple: #B05AF3;
	--lightpurple: #CDA9FF;

	--darkblue: #4ABDAC;
	--mediumblue: #66D3AA;
	--lightblue: #E8FFF6;

	--darkyellow: #AEAB5C;
	--mediumyellow: #FFF205;
	--lightyellow: #FFFCBB;
}

/*Font*/
@font-face {
  font-family: "Pixelated MS Sans Serif";
  src: url("fonts/converted/ms_sans_serif.woff") format("woff");
  src: url("fonts/converted/ms_sans_serif.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Pixelated MS Sans Serif";
  src: url("fonts/converted/ms_sans_serif_bold.woff") format("woff");
  src: url("fonts/converted/ms_sans_serif_bold.woff2") format("woff2");
  font-weight: bold;
  font-style: normal;
}

/*General Settings*/
body{
	background-image: url("images/BG.jpg");
	background-repeat: repeat;
  font-family: "Pixelated MS Sans Serif";
  font-size: 1.0rem;
  line-height: 1.6rem;
  letter-spacing: 2;
}

nav{
  height: 120px;
	width: 100%;
  background-color: var(--mediumgrey);
  position: fixed;
	top: 0px;
	display: flex;
	flex-direction: column;
	align-items: center;
	z-index: 3;
	padding-top: 20px;
}

#wrapper{
	position: absolute;
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
}

h1{
  font-family: "Bebas Neue";
  font-size: 8rem;
  letter-spacing: .9rem;
  color: var(--darkpink);
  text-shadow: 10px 10px var(--mediumpink);
  line-height: 8rem;
}

h2{
  font-family: "Bebas Neue";
  font-size: 3rem;
  letter-spacing: .3rem;
  line-height: 3rem;
  color: var(--darkpink);
}

h3{
  font-size: 1.5rem;
  font-weight: 100;
}

strong{
	text-decoration: underline;
	color: #fff;
	font-weight: 100;
}

#image{
	height: auto;
	width: 100%;
}

/*Links Formatting*/
a{
	color: #fff;
	background-color: var(--mediumgrey);
	font-size: 2rem;
	line-height: 2;
	text-align: center;
	text-decoration: none;
	box-shadow: 4px 4px 1px rgba(0, 0, 0, .5);
	border-top: 4px solid rgba(255,255,255, .5);
	border-left: 4px solid rgba(255,255,255, .5);
}

a:hover, a:focus, a:active{
	color: var(--darkgrey);
	background-color: var(--lightgrey);
	box-shadow: 4px 4px 1px rgba(255,255,255, .5);
	border-top: 4px solid rgba(0, 0, 0, .5);
	border-left: 4px solid rgba(0, 0, 0, .5);
}

/*Grid Setup*/
.grid{
  display: inline-grid;
  grid-template-columns: repeat(10, 1fr);
  margin-left: 20px;
  margin-right: 20px;
  grid-gap: 20px;
  width: 100%;
  min-width: 900px;
  max-width: 1400px;
}

.gridrow{
	display: inline-grid;
	grid-template-rows: repeat(5, 25%);
	width: 100%;
	height: auto;
}

/*Nav*/
.navlink-1{
	grid-column: 2 / span 2;
}

.navlink-2{
	grid-column: 4 / span 2;
}

.navlink-3{
	grid-column: 6 / span 2;
}

.navlink-4{
	grid-column: 8 / span 2;
}

#anchor1{
	grid-row: 1 / span 1;
}

#anchor2{
	margin-bottom: 25rem;
	grid-row: 2 / span 1;
}

#anchor3{
	margin-bottom: 25rem;
	grid-row: 3 / span 1;
}

#anchor4{
	margin-bottom: 25rem;
	grid-row: 4 / span 1;
}

#anchor5{
	margin-bottom: 25rem;
	height: 2.6rem;
	grid-row: 5 / span 1;
}

/*Title*/
#titleblock{
	margin-top: 210px;
  margin-bottom: 50px;
	max-height: 500px;
	position: relative;
}

.title{
  grid-column: 3 / span 3;
}

.icon{
  grid-column: 7 / span 2;
}

/*Popup General*/
#popupwrapper{
	margin-bottom: 430px;
}

.popup{
  width: 100%;
  height: auto;
  grid-column: 3 / span 6;
  display: inline-grid;
  align-items: center;
	position: relative;
	padding-bottom: 1.6rem;
}

.popupheader{
  width: 100%;
  height: 2.6rem;
  grid-column: 1 / span 6;
  line-height: 2.6rem;
  padding-left: .6rem;
}

/*Pink Popup*/
#popup-pink{
  background: var(--lightpink);
  box-shadow: 10px 10px var(--mediumpink);
}

#header-pink{
  background-color: var(--darkpink);
	margin-bottom: 1.6rem;
}

#image-pink{
  grid-column: 1 / span 3;
  padding-left: 1.6rem;
	padding-right: 1.6rem;
}

#popuptext-pink{
  grid-column: 4 / span 3;
  padding-right: 1.6rem;
  padding-left: 1.6rem;
}

/*Purple Popup*/
#popup-purple{
  background: var(--lightpurple);
  box-shadow: 10px 10px var(--mediumpurple);
}

#header-purple{
  background-color: var(--darkpurple);
	margin-bottom: 1.6rem;
}

#image-purple{
	grid-column: 1 / span 3;
  padding-left: 1.6rem;
	padding-right: 1.6rem;
	height: 420px;
}

#popuptext-purple{
	grid-column: 4 / span 3;
  padding-right: 1.6rem;
  padding-left: 1.6rem;
}

/*Blue Popup*/
#popup-blue{
  background: var(--lightblue);
  box-shadow: 10px 10px var(--mediumblue);
  align-items: none;
}

#header-blue{
  background-color: var(--darkblue);
	margin-bottom: 1.6rem;
}

#popuptext-blue{
	text-align: center;
	padding-right: 1.6rem;
	padding-left: 1.6rem;
	grid-column: 2 / span 4;
}

#image-blue{
	text-align: center;
	padding-right: 1.6rem;
	padding-left: 1.6rem;
	grid-column: 3 / span 2;
}

/*Yellow Popup*/
#popup-yellow{
  background: var(--lightyellow);
  box-shadow: 10px 10px var(--mediumyellow);
}

#header-yellow{
  background-color: var(--darkyellow);
	margin-bottom: 1.6rem;
}

